<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.swapnil.sbihackathon.createCheque2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="14sp"
                    android:text="@string/amountDigit"
                    android:textColor="@color/colorDarkGray"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="16sp"
                    android:paddingLeft="10dp"
                    android:textCursorDrawable="@drawable/edittext_cursor_color"
                    android:hint="Enter Amount In Digit"
                    android:textColorHint="#DDDDDD"
                    android:id="@+id/editTextAmountInDigit"
                    android:maxLines="1"
                    android:inputType="number"
                    android:background="@drawable/border"
                    android:textColor="@color/colorLightGray"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="14sp"
                    android:text="@string/amountWords"
                    android:textColor="@color/colorDarkGray"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="16sp"
                    android:paddingLeft="10dp"
                    android:textCursorDrawable="@drawable/edittext_cursor_color"
                    android:hint="Enter Amount In Words"
                    android:textColorHint="#DDDDDD"
                    android:id="@+id/editTextAmountInWords"
                    android:maxLines="1"
                    android:inputType="text"
                    android:background="@drawable/border"
                    android:textColor="@color/colorLightGray"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="14sp"
                    android:text="@string/date"
                    android:textColor="@color/colorDarkGray"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="16sp"
                    android:inputType="none"
                    android:textCursorDrawable="@drawable/edittext_cursor_color"
                    android:hint="Cheque Issue Date"
                    android:textColorHint="#DDDDDD"
                    android:paddingLeft="10dp"
                    android:id="@+id/editTextDate"
                    android:focusable="false"
                    android:background="@drawable/border"
                    android:textColor="@color/colorLightGray"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/buttonContinue"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:text="Continue"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:textColor="#FFFFFF"
        android:background="#1569C7"/>

</LinearLayout>
